--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # project's root directory. Please note that the following lines are
 # NECESSARY for Prologue to work correctly:
 #
-# theme: jekyll-theme-prologue
+# remote_theme: jekyll-theme-prologue
 # collections: [sections]
 #
 # They activate the theme and tell Jekyll to find your homepage content
@@ -30,13 +30,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-subtitle: Your awesome subtitle
+title: Metanymie's very cool site
+subtitle: Academia and games
 description: >- # this means to ignore newlines until "baseurl:"
-  This is the demo site for a Jekyll theme version of
-  HTML5 UP's sleek, responsive site template Prologue.
-author: Your Incredible Name
-email: your-email@example.com
+  Documentation for the ongoing research projectsof a Canadian media scholar and designer focusing on dis/embodiement in digital spaces, imaginaries, topologies and affect.
+author: Roxanne Baril-Bédard
+email: roxanne.j.barbe@gmail.com
 avatar: assets/images/avatar.jpg
 
 # You'll want to customize url and baseurl for your own site:
