--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ collections: [sections]
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Metanymie's very cool site
+title: Metanymie
 subtitle: Academia and games
 description: >- # this means to ignore newlines until "baseurl:"
   Documentation for the ongoing research projectsof a Canadian media scholar and designer focusing on dis/embodiement in digital spaces, imaginaries, topologies and affect.
